[package]
name = "flixur-backend"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
flixur-protocol = { path = "../proto" }
thiserror = "2.0.11"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls"] }
pilota = "0.11.10"
axum = { version = "0.8.1", features = ["json"] }
tower-http = { version = "0.6.2", features = ["cors"] }
