[package]
name = "flixur-backend"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
thiserror = "2.0.16"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls"] }
pilota = "0.12.3"
axum = { version = "0.8.4", features = ["json"] }
tower-http = { version = "0.6.6", features = ["cors"] }
hang = "0.5.4"
flixur-common = { path = "../common" }
